@@ -20,13 +20,14 @@ eval 'exec perl -x $0 ${1+"$@"}'
 
 use strict;
 use warnings;
+use COD::CIF::ChangeLog qw( append_changelog_to_single_item );
 use COD::CIF::JSON qw( cif2json );
 use COD::CIF::Parser qw( parse_cif );
 use COD::CIF::Tags::CanonicalNames qw( canonicalize_all_names );
 use COD::CIF::Tags::DictTags;
 use COD::CIF::Tags::COD;
 use COD::CIF::Tags::Manage qw( rename_tag exclude_tag );
-use COD::CIF::Tags::Print qw( print_cif fold );
+use COD::CIF::Tags::Print qw( print_cif );
 use COD::SOptions qw( getOptions );
 use COD::SUsage qw( usage options );
 use COD::ErrorHandler qw( process_warnings
@@ -109,51 +110,6 @@ if( $input_format eq 'json' ) {
 binmode STDOUT, ':encoding(UTF-8)';
 binmode STDERR, ':encoding(UTF-8)';
 
-# FIXME: the following subroutine has been copied from the 'cif_fix_values'
-# script. It would be better to refactor it into a separate subroutine
-# module.
-
-##
-# Records the changelog in a data block by appending the messages
-# to the _cod_depositor_comments data item value.
-# @param $data_block
-#       Reference to data block as returned by the COD::CIF::Parser.
-# @param $changelog
-#       Reference to an array of changelog messages.
-# @param $signature
-#       Signature string of the program that carried out the changes.
-##
-sub record_changelog_in_data_block
-{
-    my( $data_block, $changelog, $signature ) = @_;
-
-    return if !@{$changelog};
-
-    my $comments_tag = '_cod_depositor_comments';
-
-    my $prefix = "\n";
-    if( exists $data_block->{'values'}{$comments_tag} ) {
-        $prefix .= "\n";
-    }
-
-    my $title = 'The following automatic conversions were performed:';
-    my $folded_changelog =
-        join "\n",
-            map { fold( 70, ' +', ' ', $_ ) }
-                split m/\n/,
-                    join "\n\n", @{$changelog};
-
-    $signature =~ s/^\$|\$$//g;
-
-    $data_block->{'values'}{$comments_tag}[0] .=
-        $prefix . $title . "\n\n" .
-        $folded_changelog . "\n\n" .
-        'Automatic conversion script' . "\n" .
-         $signature;
-
-    return;
-}
-
 my %tag_spelling = ();
 eval {
     if( $replacement_list ) {
@@ -221,7 +177,9 @@ for my $filename (@ARGV) {
                 }
             }
         }
-        record_changelog_in_data_block( $dataset, \@insert_reports, $Id );
+        append_changelog_to_single_item( $dataset, \@insert_reports, {
+                                            'signature' => $Id
+                                        } );
     }
 
     eval {
