@@ -29,18 +29,20 @@ eval 'exec perl -x $0 ${1+"$@"}'
 use strict;
 use warnings;
 use List::MoreUtils qw( any );
+use COD::CIF::ChangeLog qw( summarise_messages
+                            append_changelog_to_single_item );
 use COD::CIF::Parser qw( parse_cif );
 use COD::CIF::Tags::CanonicalNames qw( canonicalize_all_names );
 use COD::CIF::Tags::DictTags;
 use COD::CIF::Tags::COD;
 use COD::CIF::Tags::TCOD;
 use COD::CIF::Tags::DFT;
-use COD::CIF::Tags::Print qw( print_cif pack_precision fold );
+use COD::CIF::Tags::Print qw( print_cif pack_precision );
 use COD::CIF::Tags::Manage qw( set_tag rename_tag );
 use COD::SOptions qw( getOptions get_value );
 use COD::SUsage qw( usage options );
-use COD::ErrorHandler qw(process_warnings process_errors
-                         process_parser_messages report_message);
+use COD::ErrorHandler qw( process_warnings process_errors
+                          process_parser_messages report_message );
 use COD::ToolsVersion;
 
 my $Id = '$Id$';
@@ -365,78 +367,6 @@ my $die_on_error_level = {
 
 binmode STDOUT, ':encoding(UTF-8)';
 binmode STDERR, ':encoding(UTF-8)';
-
-# TODO: the following subroutines should be moved to a separate module
-# and adapted to other script that use CIF dictionaries and record
-# changelogs directly in the CIF files
-
-##
-# Records the changelog in a data block by appending the messages
-# to the _cod_depositor_comments data item value.
-# @param $data_block
-#       Reference to data block as returned by the COD::CIF::Parser.
-# @param $changelog
-#       Reference to an array of changelog messages.
-# @param $signature
-#       Signature string of the program that carried out the changes.
-##
-sub record_changelog_in_data_block
-{
-    my( $data_block, $changelog, $signature ) = @_;
-
-    return if !@{$changelog};
-
-    my $comments_tag = '_cod_depositor_comments';
-
-    my $prefix = "\n";
-    if( exists $data_block->{'values'}{$comments_tag} ) {
-        $prefix .= "\n";
-    }
-
-    my $title = 'The following automatic conversions were performed:';
-    my $folded_changelog =
-        join "\n",
-            map { fold( 70, ' +', ' ', $_ ) }
-                split m/\n/,
-                    join "\n\n", @{$changelog};
-
-    $signature =~ s/^\$|\$$//g;
-
-    $data_block->{'values'}{$comments_tag}[0] .=
-        $prefix . $title . "\n\n" .
-        $folded_changelog . "\n\n" .
-        'Automatic conversion script' . "\n" .
-         $signature;
-
-    return;
-}
-
-##
-# Groups identical messages together and replaces each group with a
-# summarized version of the message.
-# @param $messages
-#       Reference to an array of error messages.
-# @return $message_summary
-#       Reference to an array of unique summary messages.
-##
-sub summarise_messages
-{
-    my ($messages) = @_;
-
-    my %message_count;
-    $message_count{$_}++ for @{$messages};
-
-    my @message_summary;
-    for my $message ( sort keys %message_count ) {
-        my $count = $message_count{$message};
-        if( $count > 1 ) {
-            $message .= " ($count times)";
-        }
-        push @message_summary, $message;
-    }
-
-    return \@message_summary;
-}
 
 ##
 # Extracts dictionary provenance details from a DDL1 dictionary.
@@ -1609,7 +1539,11 @@ for my $filename (@ARGV) {
             }
 
             @insert_reports = map { "$_." } @insert_reports;
-            record_changelog_in_data_block( $dataset, \@insert_reports, $Id );
+            append_changelog_to_single_item( $dataset, \@insert_reports,
+                                              {
+                                                'signature' => $Id
+                                              }
+                                           );
 
             print_cif( $dataset, {
                 exclude_misspelled_tags => 0,
