@@ -1,6 +1,7 @@
 cod-tools (unreleased)
 
   * Added:
+    - COD::CIF::ChangeLog module.
     - COD::CIF::DDL module.
     - COD::CIF::DDL::DDL1 module.
     - COD::CIF::Tags::Manage:
